// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SystemNotice should match snapshot for admin, admin notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__info"
      >
        <i
          class="fa fa-eye"
          title="Only visible to System Admins Icon"
        />
        Only visible to System Admins
      </div>
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot for admin, regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin and regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title2
      </div>
      some body2
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin notice 1`] = `<div />`;

exports[`components/SystemNotice should match snapshot for regular user, dismissed notice 1`] = `<div />`;

exports[`components/SystemNotice should match snapshot for regular user, dont show again notice 1`] = `<div />`;

exports[`components/SystemNotice should match snapshot for regular user, no notice 1`] = `<div />`;

exports[`components/SystemNotice should match snapshot for regular user, regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot for show function returning false 1`] = `<div />`;

exports[`components/SystemNotice should match snapshot for show function returning true 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot for with allowForget equal false 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Hanzo Team logo"
          fill="currentColor"
          role="img"
          viewBox="0 0 67 67"
        >
          <path
            d="M22.21 67V44.6369H0V67H22.21Z"
          />
          <path
            d="M66.7038 22.3184H22.2534L0.0878906 44.6367H44.4634L66.7038 22.3184Z"
          />
          <path
            d="M22.21 0H0V22.3184H22.21V0Z"
          />
          <path
            d="M66.7198 0H44.5098V22.3184H66.7198V0Z"
          />
          <path
            d="M66.7198 67V44.6369H44.5098V67H66.7198Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice should match snapshot when a custom icon is passed 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        icon
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-primary btn-sm"
          id="systemnotice_remindme"
        >
          Remind Me Later
        </button>
        <button
          class="btn btn-tertiary btn-sm"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;
